<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.EpisodeDetailActivity">
    <ImageView
        android:id="@+id/imageEpisode"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/episode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:contentDescription="@string/image_of_rick"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageEpisode"
            android:background="@drawable/degradation_episdode_detail"
            app:layout_constraintBottom_toTopOf="@+id/textCharactersAppears"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/episodeDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/episode_detail"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="23sp"
                android:layout_marginBottom="15dp"
                />
            <TextView
                android:id="@+id/episodeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                />
            <TextView
                android:id="@+id/episodeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                />
            <TextView
                android:id="@+id/episodeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textCharactersAppears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_this_episode_appears"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/episodeWithCharactersRecyclerView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/episodeWithCharactersRecyclerView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"/>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/bottom_navigation"
        android:background="@color/rickandmorty"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        app:itemIconTint="@color/rickandmorty"
        app:itemTextColor="@color/rickandmorty"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>